FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/Custom_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>Junction Object to relate contacts to multiple objects (Product Configuration and Integration Records, Opportunity).</description>
    <label>Custom Contact Role</label>
    <nameField>
        <displayFormat>C-{YYYY}{MM}-{0}</displayFormat>
        <label>Custom Contact Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Contacts Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>