FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact related to this custom object record.</description>
    <inlineHelpText>Contact related to this custom object record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Custom_Related_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>