FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact lookup field for Integration Record</description>
    <inlineHelpText>Contact related to this Integration Record</inlineHelpText>
    <label>Integration</label>
    <referenceTo>Integration__c</referenceTo>
    <relationshipName>Custom_Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>