FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Integration_Role__c.field-meta.xml
<CustomField>
    <fullName>Integration_Role__c</fullName>
    <description>Select the Role(s) this Contact plays on this Integration Record.</description>
    <inlineHelpText>Select the Role(s) this Contact plays on this Integration Record.</inlineHelpText>
    <label>Integration Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main Contact</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>