FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity this Contact has a role in.</description>
    <inlineHelpText>Select Opportunity this Contact has a role in.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Custom_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>