FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Opportunity_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Role__c</fullName>
    <description>Select the Role this person plays on this Opportunity</description>
    <inlineHelpText>Select the Role this person plays on this Opportunity</inlineHelpText>
    <label>Opportunity Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Contract Contact</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>User buyer</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>