FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Product_Config_Role__c.field-meta.xml
<CustomField>
    <fullName>Product_Config_Role__c</fullName>
    <description>Select the Role(s) this person plays for this Product Configuration (portal / product).</description>
    <inlineHelpText>Select the Role(s) this person plays for this Product Configuration (portal / product).</inlineHelpText>
    <label>Product Config Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Business User</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Dashboard Admin</fullName>
            </value>
            <value>
                <fullName>Dashboard User</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Economic Decision Maker</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Main Portal Contact</fullName>
            </value>
            <value>
                <fullName>Operational Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Post Contact</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>