FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Prod Config record this contact is related to.</description>
    <inlineHelpText>Prod Config record this contact is related to.</inlineHelpText>
    <label>Product Configuration</label>
    <referenceTo>Product_Configuration__c</referenceTo>
    <relationshipName>Custom_Related_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>