FLY wire David/force-app/main/default/objects/Custom_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Copy of the Roles selected on Opp Role, PC Role or Int Role. Filled in by Process builder.</description>
    <inlineHelpText>Copy of the Roles selected on Opp Role, PC Role or Int Role. Filled in by Process builder.</inlineHelpText>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>